--- a/src/main/resources/validation_pt_BR.properties
+++ b/src/main/resources/validation_pt_BR.properties
@@ -1,5 +1,5 @@
 
 # This will override validation messages caused by @NotEmpty annotation
-NotEmpty=This cannot be empty !
+NotEmpty=Não pode ser vazio !
 # This will override @NotEmpty validation messages with a path of messageFromUser
-NotEmpty.messageFromUser=Don't you have anything to say ?
+NotEmpty.messageFromUser=Você não tem nada a dizer ?
