--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -90,6 +90,10 @@ app.portfolio.income.date=Data pagto
 app.portfolio.incomes.header=Proventos
 app.portfolio.incomes.total=Total
 
+app.portfolio.chart.pre=Alocação pelo preço de compra
+app.portfolio.chart.pos=Alocação pelo preço atual
+app.portfolio.chart.posInc=Alocação pelo preço atual + rendimentos
+
 app.fr.title=Fatos Relevantes
 app.fr.lbl.filter=Filtro
 app.fr.lbl.date=Data
