--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -74,6 +74,7 @@ app.portfolio.percent.pos=% Pós
 app.portfolio.lastNegotiation=Última C/V
 app.portfolio.lastIncome=Último provento
 app.portfolio.btn.showAll=Mostrar posições zeradas ?
+app.portfolio.btn.hideAll=Esconder posições zeradas
 app.portfolio.lastIncome=Último Rendimento
 app.portfolio.lastIncome.s=UR
 app.portfolio.dy.am.a=% dy A
