New portfolio calcs method

--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -112,6 +112,9 @@ app.config.stockType.delete.dlg.msg=Deseja realmente remover este item?
 app.config.stockType.add=Adicionar Tipo de Ativo
 app.config.stockType.add.dlg.header=Adicionar/Editar Tipo de Ativo
 
+app.config.system.actions.title=Ações Emergenciais
+app.config.system.actions.calc.portfolio=Calcula Itens da Carteira
+
 app.config.user.title=Usuários
 app.config.user.add=Adicionar Usuário
 app.config.user.add.dlg.header=Adicionar/Editar Usuário
