--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -81,6 +81,7 @@ app.portfolio.dy.am.a=% dy A
 app.portfolio.dy.am.c=% dy C
 app.portfolio.aloc=% Aloc
 app.portfolio.total=Total da carteira
+app.portfolio.company.header=Detalhes da Empresa
 
 app.portfolio.income.header=Adicionar Provento
 app.portfolio.income.add=Adicionar Provento
