--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -21,6 +21,7 @@ app.label.in=em
 
 app.menu.home=Meus Investimentos
 app.menu.porfolio=Carteiras
+app.menu.statement=Extrato
 app.menu.result=Resultados
 app.menu.incomes=Rendimentos
 app.menu.profile=Meus Dados
@@ -72,10 +73,9 @@ app.portfolio.delete.dlg.msg=Deseja realmente remover este item?
 app.portfolio.unitValue=Valor unitário
 app.portfolio.percent.pos=% Pós
 app.portfolio.lastNegotiation=Última C/V
-app.portfolio.lastIncome=Último provento
+app.portfolio.lastIncome=\u00DAltimo Rendimento
 app.portfolio.btn.showAll=Mostrar posições zeradas
 app.portfolio.btn.hideAll=Esconder posições zeradas
-app.portfolio.lastIncome=Último Rendimento
 app.portfolio.lastIncome.s=UR
 app.portfolio.dy.am.a=% dy A
 app.portfolio.dy.am.c=% dy C
@@ -179,3 +179,17 @@ app.home.portfolio.total.amount=Total
 app.home.portfolio.total=Total investido
 app.home.portfolio.total.actual=Total atual
 app.home.portfolio.values=Valores ( R$ )
+
+app.statement.title=Extrato
+app.statement.lbl.filter=Filtro
+app.statement.lbl.filterType=Tipo
+app.statement.lbl.filterType.negotiation=Operação
+app.statement.lbl.filterType.income=Rendimento
+app.statement.lbl.date=Data
+app.statement.lbl.initialDate=Data Início
+app.statement.lbl.finalDate=Data Fim
+app.statement.lbl.symbol=Código
+app.statement.lbl.type=Operação
+app.statement.lbl.value=Valor Un.
+app.statement.lbl.amount=Total
+app.statement.lbl.qtt=Qtde
