Statement - Themes - primefaces upgrade

--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -161,13 +161,13 @@ app.result.fee=IR a recolher
 app.result.feeAmount=IR acumulado
 app.result.fee.paydate=Data pagamento
 
-app.incomes.title=Rendimentos
+app.incomes.title=Proventos
 app.incomes.stock=Ativo
 app.incomes.avg24=Média 24m
 app.incomes.avg12=Média 12m
 app.incomes.lastQuote=Cotação
-app.incomes.income.header=Rendimento
-app.incomes.income.add=Adicionar rendimento
+app.incomes.income.header=Provento
+app.incomes.income.add=Adicionar provento
 app.incomes.incomeDate=Data de divulgação
 app.incomes.yearMonth=Mês de referência
 
@@ -183,8 +183,9 @@ app.home.portfolio.values=Valores ( R$ )
 app.statement.title=Extrato
 app.statement.lbl.filter=Filtro
 app.statement.lbl.filterType=Tipo
-app.statement.lbl.filterType.negotiation=Operação
-app.statement.lbl.filterType.income=Rendimento
+app.statement.lbl.filterType.negotiation=Operações
+app.statement.lbl.filterType.income=Proventos
+app.statement.lbl.filterSort=Ordenação
 app.statement.lbl.date=Data
 app.statement.lbl.initialDate=Data Início
 app.statement.lbl.finalDate=Data Fim
@@ -193,3 +194,5 @@ app.statement.lbl.type=Operação
 app.statement.lbl.value=Valor Un.
 app.statement.lbl.amount=Total
 app.statement.lbl.qtt=Qtde
+app.statement.lbl.sort.newer=Mais recentes
+app.statement.lbl.sort.older=Mais antigos
