Statement - new columns

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -189,9 +189,11 @@ app.statement.lbl.filterSort=Ordenação
 app.statement.lbl.date=Data
 app.statement.lbl.initialDate=Data Início
 app.statement.lbl.finalDate=Data Fim
-app.statement.lbl.symbol=Código
-app.statement.lbl.type=Operação
-app.statement.lbl.value=Valor Un.
+app.statement.lbl.symbol=Code
+app.statement.lbl.type=Operation
+app.statement.lbl.value=Value
+app.statement.lbl.avgPrice=Avg Value
+app.statement.lbl.costs=Costs
 app.statement.lbl.amount=Total
 app.statement.lbl.qtt=Qtde
 app.statement.lbl.sort.newer=Mais recentes
