--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -192,6 +192,8 @@ app.statement.lbl.finalDate=Data Fim
 app.statement.lbl.symbol=Código
 app.statement.lbl.type=Operação
 app.statement.lbl.value=Valor Un.
+app.statement.lbl.avgPrice=Preço Médio
+app.statement.lbl.costs=Custos
 app.statement.lbl.amount=Total
 app.statement.lbl.qtt=Qtde
 app.statement.lbl.sort.newer=Mais recentes
