--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -18,6 +18,7 @@ app.label.to=para
 app.label.from=de
 app.label.to.2=a
 app.label.in=em
+app.label.export.xls=Exportar para Excel
 
 app.menu.home=Meus Investimentos
 app.menu.porfolio=Carteiras
@@ -179,6 +180,8 @@ app.home.portfolio.total.amount=Total
 app.home.portfolio.total=Total invested
 app.home.portfolio.total.actual=Total actual
 app.home.portfolio.values=Values
+app.home.portfolio.graph.buy=Valores de compra
+app.home.portfolio.graph.actual=Valores atual
 
 app.statement.title=Extrato
 app.statement.lbl.filter=Filtro
@@ -198,3 +201,17 @@ app.statement.lbl.amount=Total
 app.statement.lbl.qtt=Qtde
 app.statement.lbl.sort.newer=Mais recentes
 app.statement.lbl.sort.older=Mais antigos
+
+app.config.companies.title=Empresas / Fundos
+app.config.companies.name=Nome
+app.config.companies.prefix=Prefixo
+app.config.companies.ticker=Código
+app.config.companies.fullName=Nome completo
+app.config.companies.category=Categoria
+app.config.companies.cnpj=CNPJ
+app.config.companies.admName=Administrador
+app.config.companies.admCnpj=Adm CNPJ
+app.config.companies.responsible=Responsável
+app.config.companies.phone=Telefone
+app.config.companies.isin=ISIN
+app.config.companies.setor=Setor
