--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -83,6 +83,8 @@ app.portfolio.dy.am.c=% dy C
 app.portfolio.aloc=% Aloc
 app.portfolio.total=Total da carteira
 app.portfolio.company.header=Detalhes da Empresa
+app.portfolio.company.setor=Setor
+app.portfolio.company.vp=VP
 
 app.portfolio.income.header=Adicionar Provento
 app.portfolio.income.add=Adicionar Provento
@@ -96,6 +98,8 @@ app.portfolio.incomes.total=Total
 app.portfolio.chart.pre=Alocação pelo preço de compra
 app.portfolio.chart.pos=Alocação pelo preço atual
 app.portfolio.chart.posInc=Alocação pelo preço atual + rendimentos
+app.portfolio.chart.sector.pre=Alocação por setor (Aquisição)
+app.portfolio.chart.sector.pos=Alocação por setor (Atual)
 
 app.fr.title=Fatos Relevantes
 app.fr.lbl.filter=Filtro
@@ -171,6 +175,7 @@ app.incomes.income.header=Provento
 app.incomes.income.add=Adicionar provento
 app.incomes.incomeDate=Data de divulgação
 app.incomes.yearMonth=Mês de referência
+app.incomes.reload.title=Recalcular
 
 app.home.title=Meus Investimentos
 app.home.position.title=Posição Consolidada
@@ -180,8 +185,8 @@ app.home.portfolio.total.amount=Total
 app.home.portfolio.total=Total investido
 app.home.portfolio.total.actual=Total atual
 app.home.portfolio.values=Valores ( R$ )
-app.home.portfolio.graph.buy=Valores de compra
-app.home.portfolio.graph.actual=Valores atual
+app.home.portfolio.graph.buy=Aquisição
+app.home.portfolio.graph.actual=Atual
 
 app.statement.title=Extrato
 app.statement.lbl.filter=Filtro
@@ -215,3 +220,6 @@ app.config.companies.responsible=Responsável
 app.config.companies.phone=Telefone
 app.config.companies.isin=ISIN
 app.config.companies.setor=Setor
+app.config.companies.classification=Classificação
+app.config.companies.vp=VP
+app.config.companies.vp.title=Valor Patrimonial
