--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -85,6 +85,7 @@ app.portfolio.total=Total da carteira
 app.portfolio.company.header=Detalhes da Empresa
 app.portfolio.company.setor=Setor
 app.portfolio.company.vp=VP
+app.portfolio.pvp=P/VP
 
 app.portfolio.income.header=Adicionar Provento
 app.portfolio.income.add=Adicionar Provento
@@ -176,6 +177,8 @@ app.incomes.income.add=Adicionar provento
 app.incomes.incomeDate=Data de divulgação
 app.incomes.yearMonth=Mês de referência
 app.incomes.reload.title=Recalcular
+app.incomes.company.vp=VP
+app.incomes.pvp=P/VP
 
 app.home.title=Meus Investimentos
 app.home.position.title=Posição Consolidada
