## Acerto de extrato

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -206,7 +206,8 @@ app.statement.lbl.value=Value
 app.statement.lbl.avgPrice=Avg Value
 app.statement.lbl.costs=Costs
 app.statement.lbl.amount=Total
-app.statement.lbl.qtt=Qtde
+app.statement.lbl.qtt=Qtde Operação
+app.statement.lbl.qttPortfolio=Qtde Atual
 app.statement.lbl.sort.newer=Mais recentes
 app.statement.lbl.sort.older=Mais antigos
 
