--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -206,7 +206,8 @@ app.statement.lbl.value=Valor Un.
 app.statement.lbl.avgPrice=Preço Médio
 app.statement.lbl.costs=Custos
 app.statement.lbl.amount=Total
-app.statement.lbl.qtt=Qtde
+app.statement.lbl.qtt=Qtde Operação
+app.statement.lbl.qttPortfolio=Qtde Atual
 app.statement.lbl.sort.newer=Mais recentes
 app.statement.lbl.sort.older=Mais antigos
 
