--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -73,8 +73,8 @@ app.portfolio.add.dlg.header=Compra/Venda de Ativo
 app.portfolio.delete.dlg.msg=Deseja realmente remover este item?
 app.portfolio.unitValue=Valor unitário
 app.portfolio.percent.pos=% Pós
-app.portfolio.lastNegotiation=Última C/V
-app.portfolio.lastIncome=\u00DAltimo Rendimento
+app.portfolio.lastNegotiation=Última operação
+app.portfolio.lastIncome=\u00DAltimo rendimento
 app.portfolio.btn.showAll=Mostrar posições zeradas
 app.portfolio.btn.hideAll=Esconder posições zeradas
 app.portfolio.lastIncome.s=UR
@@ -86,6 +86,9 @@ app.portfolio.company.header=Detalhes da Empresa
 app.portfolio.company.setor=Setor
 app.portfolio.company.vp=VP
 app.portfolio.pvp=P/VP
+app.portfolio.empty=Selecione um item da carteira.
+
+app.portfolio.negotiation.header=Operações
 
 app.portfolio.income.header=Adicionar Provento
 app.portfolio.income.add=Adicionar Provento
@@ -179,6 +182,7 @@ app.incomes.yearMonth=Mês de referência
 app.incomes.reload.title=Recalcular
 app.incomes.company.vp=VP
 app.incomes.pvp=P/VP
+app.incomes.company.setor=Setor
 
 app.home.title=Meus Investimentos
 app.home.position.title=Posição Consolidada
