--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -57,7 +57,7 @@ app.portfolio.symbol=Código
 app.portfolio.qty=Qtde
 app.portfolio.avgValue=Preço médio
 app.portfolio.actualValue=Preço atual
-app.portfolio.actavgValue=% Atual
+app.portfolio.actavgValue=% Part
 app.portfolio.totalAcquisition=R$ Compra
 app.portfolio.totalIncome=Proventos
 app.portfolio.totalActual=R$ Atual
@@ -183,6 +183,8 @@ app.incomes.reload.title=Recalcular
 app.incomes.company.vp=VP
 app.incomes.pvp=P/VP
 app.incomes.company.setor=Setor
+app.incomes.percent.avg24=% 24m
+app.incomes.percent.avg12=% 12m
 
 app.home.title=Meus Investimentos
 app.home.position.title=Posição Consolidada
@@ -231,3 +233,7 @@ app.config.companies.setor=Setor
 app.config.companies.classification=Classificação
 app.config.companies.vp=VP
 app.config.companies.vp.title=Valor Patrimonial
+
+app.config.parameters.title=Parâmetros
+app.config.parameters.key=Chave
+app.config.parameters.value=Valor
