## Bugs and improves

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -57,7 +57,7 @@ app.portfolio.symbol=Código
 app.portfolio.qty=Qtde
 app.portfolio.avgValue=Preço médio
 app.portfolio.actualValue=Preço atual
-app.portfolio.actavgValue=% Part
+app.portfolio.actavgValue=% L/P
 app.portfolio.totalAcquisition=R$ Compra
 app.portfolio.totalIncome=Proventos
 app.portfolio.totalActual=R$ Atual
@@ -66,7 +66,7 @@ app.portfolio.date=Data
 app.portfolio.type=Tipo
 app.portfolio.value=Valor
 app.portfolio.costs=Custos
-app.portfolio.resultValue=R$ Venda
+app.portfolio.resultValue=R$ L/P
 app.portfolio.newPortfolio=Nova carteira
 app.portfolio.name=Nome
 app.portfolio.add.dlg.header=Compra/Venda de Ativo
@@ -75,7 +75,7 @@ app.portfolio.unitValue=Valor unitário
 app.portfolio.percent.pos=% Pós
 app.portfolio.lastNegotiation=Última operação
 app.portfolio.lastIncome=\u00DAltimo rendimento
-app.portfolio.btn.showAll=Mostrar posições zeradas ?
+app.portfolio.btn.showAll=Mostrar posições zeradas
 app.portfolio.btn.hideAll=Esconder posições zeradas
 app.portfolio.lastIncome.s=UR
 app.portfolio.dy.am.a=% dy A
@@ -122,8 +122,8 @@ app.config.stockType.delete.dlg.msg=Deseja realmente remover este item?
 app.config.stockType.add=Adicionar Tipo de Ativo
 app.config.stockType.add.dlg.header=Adicionar/Editar Tipo de Ativo
 
-app.config.system.actions.title=Emergency actions
-app.config.system.actions.calc.portfolio=Calc Portfolio Items
+app.config.system.actions.title=Ações Emergenciais
+app.config.system.actions.calc.portfolio=Calcula Itens da Carteira
 
 app.config.user.title=Usuários
 app.config.user.add=Adicionar Usuário
@@ -188,12 +188,12 @@ app.incomes.percent.avg12=% 12m
 
 app.home.title=Meus Investimentos
 app.home.position.title=Posição Consolidada
-app.home.credits=Dabage Investments
-app.home.portfolio.name=Portfolio
+app.home.credits=Dabage Investimentos
+app.home.portfolio.name=Carteira
 app.home.portfolio.total.amount=Total
-app.home.portfolio.total=Total invested
-app.home.portfolio.total.actual=Total actual
-app.home.portfolio.values=Values
+app.home.portfolio.total=Total investido
+app.home.portfolio.total.actual=Total atual
+app.home.portfolio.values=Valores ( R$ )
 app.home.portfolio.graph.buy=Aquisição
 app.home.portfolio.graph.actual=Atual
 
@@ -206,11 +206,11 @@ app.statement.lbl.filterSort=Ordenação
 app.statement.lbl.date=Data
 app.statement.lbl.initialDate=Data Início
 app.statement.lbl.finalDate=Data Fim
-app.statement.lbl.symbol=Code
-app.statement.lbl.type=Operation
-app.statement.lbl.value=Value
-app.statement.lbl.avgPrice=Avg Value
-app.statement.lbl.costs=Costs
+app.statement.lbl.symbol=Código
+app.statement.lbl.type=Operação
+app.statement.lbl.value=Valor Un.
+app.statement.lbl.avgPrice=Preço Médio
+app.statement.lbl.costs=Custos
 app.statement.lbl.amount=Total
 app.statement.lbl.qtt=Qtde Operação
 app.statement.lbl.qttPortfolio=Qtde Atual
