--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -57,7 +57,7 @@ app.portfolio.symbol=Código
 app.portfolio.qty=Qtde
 app.portfolio.avgValue=Preço médio
 app.portfolio.actualValue=Preço atual
-app.portfolio.actavgValue=% Var.
+app.portfolio.actavgValue=% L/P
 app.portfolio.totalAcquisition=R$ Compra
 app.portfolio.totalIncome=Proventos
 app.portfolio.totalActual=R$ Atual
@@ -66,7 +66,7 @@ app.portfolio.date=Data
 app.portfolio.type=Tipo
 app.portfolio.value=Valor
 app.portfolio.costs=Custos
-app.portfolio.resultValue=R$ Venda
+app.portfolio.resultValue=R$ L/P
 app.portfolio.newPortfolio=Nova carteira
 app.portfolio.name=Nome
 app.portfolio.add.dlg.header=Compra/Venda de Ativo
