--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -38,6 +38,7 @@ btn.add=Adicionar
 btn.create=Criar
 btn.search=Buscar
 btn.clear=Limpar
+btn.update=Alterar
 
 pf.datatable.noresults=Não há dados a serem apresentados
 
@@ -124,6 +125,10 @@ app.config.stockType.add.dlg.header=Adicionar/Editar Tipo de Ativo
 
 app.config.system.actions.title=Ações Emergenciais
 app.config.system.actions.calc.portfolio=Calcula Itens da Carteira
+
+app.config.company.change.ticker.title=Alterar código de negociação
+app.config.company.change.ticker.old=Código Antigo
+app.config.company.change.ticker.new=Código Novo
 
 app.config.user.title=Usuários
 app.config.user.add=Adicionar Usuário
