--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -38,6 +38,7 @@ btn.add=Adicionar
 btn.create=Criar
 btn.search=Buscar
 btn.clear=Limpar
+btn.update=Alterar
 
 pf.datatable.noresults=Não há dados a serem apresentados
 
@@ -122,8 +123,12 @@ app.config.stockType.delete.dlg.msg=Deseja realmente remover este item?
 app.config.stockType.add=Adicionar Tipo de Ativo
 app.config.stockType.add.dlg.header=Adicionar/Editar Tipo de Ativo
 
-app.config.system.actions.title=Ações Emergenciais
-app.config.system.actions.calc.portfolio=Calcula Itens da Carteira
+app.config.system.actions.title=Ações Pontuais
+app.config.system.actions.calc.portfolio=Recalcula Itens da Carteira
+
+app.config.company.change.ticker.title=Alterar código de negociação
+app.config.company.change.ticker.old=Código Antigo
+app.config.company.change.ticker.new=Código Novo
 
 app.config.user.title=Usuários
 app.config.user.add=Adicionar Usuário
