--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -19,6 +19,8 @@ app.label.from=de
 app.label.to.2=a
 app.label.in=em
 app.label.export.xls=Exportar para Excel
+app.label.refresh=Atualizar
+app.label.refresh.quotes=Atualizar cotações
 
 app.menu.home=Meus Investimentos
 app.menu.porfolio=Carteiras
@@ -79,6 +81,10 @@ app.portfolio.lastIncome=\u00DAltimo rendimento
 app.portfolio.btn.showAll=Mostrar posições zeradas
 app.portfolio.btn.hideAll=Esconder posições zeradas
 app.portfolio.lastIncome.s=UR
+app.portfolio.lastIncome.fd=Data Com
+app.portfolio.lastIncome.pd=Data pagamento
+app.portfolio.lastIncome.li=Último rendimento
+app.portfolio.lastIncome.t=Valor total
 app.portfolio.dy.am.a=% dy A
 app.portfolio.dy.am.c=% dy C
 app.portfolio.aloc=% Aloc
@@ -201,6 +207,7 @@ app.home.portfolio.total.actual=Total atual
 app.home.portfolio.values=Valores ( R$ )
 app.home.portfolio.graph.buy=Aquisição
 app.home.portfolio.graph.actual=Atual
+app.home.portfolio.total.percent=Performance
 
 app.statement.title=Extrato
 app.statement.lbl.filter=Filtro
@@ -221,6 +228,9 @@ app.statement.lbl.qtt=Qtde Operação
 app.statement.lbl.qttPortfolio=Qtde Atual
 app.statement.lbl.sort.newer=Mais recentes
 app.statement.lbl.sort.older=Mais antigos
+app.statement.lbl.newsDate=Data referência
+app.statement.lbl.quote=Cotação
+app.statement.lbl.performance=Performance
 
 app.config.companies.title=Empresas / Fundos
 app.config.companies.name=Nome
