--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -252,3 +252,11 @@ app.config.companies.vp.title=Valor Patrimonial
 app.config.parameters.title=Parâmetros
 app.config.parameters.key=Chave
 app.config.parameters.value=Valor
+
+app.config.company.new.title=Inserir novo FII
+app.config.company.new.ticker=Código
+app.config.company.new.name=Nome curto
+app.config.company.new.fullname=Nome completo
+app.config.company.new.category=Categoria
+app.config.company.new.setor=Setor
+app.config.company.new.setores=Logístico Escritório Hotéis Varejo Recebíveis Fundos Educacional Desenvolvimento
